--- a/views/shared/head.ejs
+++ b/views/shared/head.ejs
@@ -19,10 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#home">Home</a>
+                            <a class="nav-link text-white" href="/home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#private">Privacy</a>
+                            <a class="nav-link text-white" href="/projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/private">Privacy</a>
                         </li>
                     </ul>
                 </div>
