Added Projects Tab, Added Aboutme Tab
Added Projects and About Me Tab and add the routes for them in the serverRouter.js.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -4,9 +4,7 @@
     <main role="main" class="pb-3">
 
         <div class="jumbotron text-center">
-            <h1 class="display-4 mt-5">Welcome to Kurt's Portfolio!</h1>
-            <p class="lead mt-3"> <i class="fa fa-home"></i> Guelph, Canada <b>|</b> <i class="fa fa-envelope"></i> kurt.sialana@gmail.com <b>|</b> <i class="fa fa-mobile"></i> +1 (519)-731-5142</p>
-            <p class="lead mb-5"> <i class="fa fa-linkedin"></i> https://www.linkedin.com/in/kurtrsialana/ <b>|</b> <i class="fa fa-github"></i> https://github.com/Whosthisguy21/</p>
+            <h1 class="display-4 mt-5">ABOUT ME</h1>
             <hr class="my-4">
         </div>
         
@@ -18,14 +16,18 @@
                         My name is Kurt Ronald Sialana, and I am a proficient Full-Stack Developer currently in my 3rd year of the Computer Programming & Analysis program at Conestoga College.
                         <br>
                         <br>
-                        Over the past 2.5 years, I have...
+                        Over the past 2.5 years, I have gained experience with a variety of programming languages, including HTML, CSS, JavaScript/TypeScript, Java, C#, Python, and SQL.
+                        <br>
+                        <br>
+                        I have worked extensively with frameworks such as ASP.NET Core, Node.js, Express.js, and Angular.js. Additionally, I am proficient in database technologies, including MongoDB, MySQL, SQL Server Management Studio (SSMS), and PostgreSQL
                     </p>
-                    <a class="btn btn-outline-dark" role="button" href="/about">About Me</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="h-100 p-5 bg-white border rounded-3">
-                    <img src="/images/Me.png" class="img-fluid" alt="Picture of Kurt Sialana">
+                    <h2>Maybe Have it Do Something</h2>
+                    <p>do something</p>
+                    <a class="btn btn-outline-dark" role="button" asp-area="" asp-controller="Events" asp-action="">View All Events</a>
                 </div>
             </div>
         </div>
