--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -1,5 +1,21 @@
 <footer class="border-top footer text-muted">
-    <div class="container mt-3 mb-3">
-        &copy; 2024 - Portfolio 
+    <div class="container mt-3 mb-3 d-flex justify-content-between align-items-center">
+        <!-- Icons aligned to the left -->
+        <div class="text-start">
+            <a href="https://www.linkedin.com/in/kurtrsialana/" target="_blank" class="me-2" style="text-decoration: none;">
+                <i class="fa fa-linkedin fa-2x"></i>
+            </a>
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            <a href="https://github.com/Whosthisguy21/" target="_blank" style="text-decoration: none;">
+                <i class="fa fa-github fa-2x"></i>
+            </a>
+        </div>
+
+        <!-- Text aligned to the right -->
+        <div class="text-end">
+            &copy; 2024 - Kurt Ronald Sialana's Portfolio
+        </div>
     </div>
 </footer>
