Edited some front end

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -5,6 +5,8 @@
 
         <div class="jumbotron text-center">
             <h1 class="display-4 mt-5">ABOUT ME</h1>
+            <p class="lead mt-3"> <i class="fa fa-home"></i> Guelph, Canada <b>|</b> <i class="fa fa-envelope"></i> kurt.sialana@gmail.com <b>|</b> <i class="fa fa-mobile"></i> +1 (519)-731-5142</p>
+            <p class="lead mb-5"> <i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/kurtrsialana/" style="text-decoration: none; color: black;" target="_blank">https://www.linkedin.com/in/kurtrsialana/</a> <b>|</b> <i class="fa fa-github"></i> <a href="https://github.com/Whosthisguy21/" style="text-decoration: none; color: black;" target="_blank">https://github.com/Whosthisguy21/</a> </p>
             <hr class="my-4">
         </div>
         
@@ -25,9 +27,7 @@
             </div>
             <div class="col-md-6">
                 <div class="h-100 p-5 bg-white border rounded-3">
-                    <h2>Maybe Have it Do Something</h2>
-                    <p>do something</p>
-                    <a class="btn btn-outline-dark" role="button" asp-area="" asp-controller="Events" asp-action="">View All Events</a>
+                    <img src="/images/Me.png" class="img-thumbnail" alt="Picture of Kurt Sialana">
                 </div>
             </div>
         </div>
