--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -9,6 +9,23 @@
             <hr class="my-4">
         </div>
 
+        <div class="banner">
+            <div class="slider" style="--quantity: 10">
+                <div class="item" style="--position: 1"><img src="/images/me1.png" alt="Picture of me"></div>
+                <div class="item" style="--position: 2"><img src="/images/me2.png" alt="Picture of me"></div>
+                <div class="item" style="--position: 3"><img src="/images/me3.png" alt="Picture of me"></div>
+                <div class="item" style="--position: 4"><img src="/images/me4.png" alt="Picture of me"></div>
+                <div class="item" style="--position: 5"><img src="/images/me5.png" alt="Picture of me"></div>
+                <div class="item" style="--position: 6"><img src="/images/me6.jpg" alt="Picture of me"></div>
+                <div class="item" style="--position: 7"><img src="/images/me7.jpg" alt="Picture of me"></div>
+                <div class="item" style="--position: 8"><img src="/images/me8.jpg" alt="Picture of me"></div>
+                <div class="item" style="--position: 9"><img src="/images/me9.jpg" alt="Picture of me"></div>
+                <div class="item" style="--position: 10"><img src="/images/me10.jpg" alt="Picture of me"></div>
+            </div>
+        </div>
+
+        
+
     </main>
 </div>
 
